# embedded-systems-engineering-m2

./: .gitignore  README.md
cpp/: .env  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.ps1  config.json  setup-dependencies.bat  test_api.bat  test_api_data.cpp  test_api_data.ps1  vcpkg.json
cpp/include/: acquisition_scheduler.hpp  config_manager.hpp  data_storage.hpp  ecoWatt_device.hpp  exceptions.hpp  http_client.hpp  logger.hpp  modbus_frame.hpp  protocol_adapter.hpp  types.hpp
cpp/src/: acquisition_scheduler.cpp  acquisition_scheduler_new.cpp  config_manager.cpp  data_storage.cpp  ecoWatt_device.cpp  ecoWatt_device_new.cpp  http_client.cpp  logger.cpp  main.cpp  modbus_frame.cpp  protocol_adapter.cpp
docs/: API-Implementation-Mapping.md  Milestone2-InverterSIM-Integration.md  ProtocolAdapter-Implementation-DeepDive.md  Short-Protocol-Documentation-Test-Scenarios.md
tests/: CMakeLists.txt  README.md  run_error_analysis.cpp  test_acquisition_scheduler.cpp  test_api_integration.cpp  test_data_storage.cpp  test_error_handling.cpp  test_error_scenarios.cpp  test_modbus_frame.cpp  test_protocol_adapter.cpp
